--- a/main.css
+++ b/main.css
@@ -146,3 +146,16 @@ table {
   padding-right: 30px;
   width: 960px;
 }
+/*
+  ========================================
+  typography
+  ========================================
+*/
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  margin-bottom: 22px;
+}
