update css dan html

--- a/main.css
+++ b/main.css
@@ -159,3 +159,17 @@ h5,
 p {
   margin-bottom: 22px;
 }
+/*
+  ========================================
+  buttons
+  ========================================
+*/
+.btn {
+  border-radius: 5px;
+  display: inline-block;
+  margin: 0;
+}
+.btn-alt {
+  border-radius: 1px solid #dfe2e5;
+  padding: 10px 30px;
+}
