--- a/main.css
+++ b/main.css
@@ -129,6 +129,23 @@ table {
 }
 /*
   ========================================
+  Clearfix
+  ========================================
+*/
+.group:before,
+.group:after {
+  content: "";
+  display: table;
+}
+.group:after {
+  clear: both;
+}
+.group {
+  clear: both;
+  *zoom: 1;
+}
+/*
+  ========================================
   Grid
   ========================================
 */
