--- a/main.css
+++ b/main.css
@@ -198,3 +198,58 @@ p {
 .hero {
   padding: 20px 80px 66px 80px;
 }
+
+/*
+  ========================================
+  Primary Header
+  ========================================
+*/
+.logo {
+  border-top: 4px solid #648880;
+  padding: 40px 22px 0;
+  float: left;
+}
+/*
+  ========================================
+  Primary footer
+  ========================================
+*/
+.primary-footer small {
+  float: left;
+}
+.primary-footer {
+  padding-top: 44px;
+  padding-bottom: 44px;
+}
+/*
+  ========================================
+  System grid dan Columns
+  ========================================
+*/
+
+.col-1-3 {
+  width: 33%;
+  display: inline-block;
+  vertical-align: top;
+}
+.col-2-3 {
+  width: 66%;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.grid,
+.col-1-3,
+.col-2-3 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.container,
+.grid {
+  margin: 0 auto;
+  width: 960px;
+}
+.container {
+  padding-left: 30px;
+  padding-right: 30px;
+}
